package com.nhvn.todoandroidnative.ui.navigation

object Routes {
    const val homeScreen = "HomeScreen"
    const val editTodoScreen = "EditTodoScreen"
}