...
            floatingActionButton = {
                if (myAppState.shouldShowAddTodoFloatingActionButton) {
                    FloatingActionButton(onClick = {
                        navController.navigate(
                            Routes.editTodoScreen("")
                        )
                    }, modifier = Modifier.testTag("AddTodoFloatingActionButton")) {
                        Icon(Icons.Rounded.Add, contentDescription = "Localized description")
                    }
                }

            }
        ) {
...
